--- a/RoomDBSample/app/src/main/AndroidManifest.xml
+++ b/RoomDBSample/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SQLiteExample">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name="com.example.roomdbexample.CreateEventActivity"></activity>
         <activity android:name="com.example.roomdbexample.MainActivity">
             <intent-filter>
